Make sure the modifications cover page widget works for all HRSA covers

--- a/bloom_nofos/bloom_nofos/static/theme-base.css
+++ b/bloom_nofos/bloom_nofos/static/theme-base.css
@@ -156,21 +156,6 @@ h2 {
 }
 
 /* Custom CSS for one nofo at a time */
-.nofo--cover-page--callout-box.callout-box--icon {
-  display: inline-block;
-  background-color: white;
-  margin-right: -15px;
-}
-
-.nofo--cover-page--callout-box.callout-box--icon .callout-box--contents svg {
-  width: 22px;
-}
-
-.nofo--cover-page--callout-box.callout-box--icon .callout-box--contents p,
-.nofo--cover-page--callout-box.callout-box--icon .callout-box--contents a {
-  color: #940200;
-}
-
 .hrsa-24-014 .toc h2 {
   margin-top: -16px;
   margin-bottom: 16px;
@@ -1069,7 +1054,8 @@ section.section .section--title-page::before {
   margin-bottom: 0;
 }
 
-.callout-box--icon {
+.callout-box--icon,
+.nofo--cover-page--callout-box {
   padding: 10px 15px;
 }
 
@@ -1091,6 +1077,14 @@ section.section .section--title-page::before {
 
 .callout-box--questions .callout-box--contents p {
   font-size: 12pt;
+}
+
+.nofo--cover-page--callout-box {
+  margin-right: -15px; /* same as right margin, right-align text */
+}
+
+.nofo--cover-page--callout-box .callout-box--contents {
+  font-size: 10.5pt;
 }
 
 .section--endnotes h3,
